[tool.poetry]
name = "aiocronjob"
version = "0.3.0"
description = "Schedule async tasks and manage them using a REST API or WEB UI"
readme = "README.md"
repository = "https://github.com/devtud/aiocronjob"
homepage = "https://github.com/devtud/aiocronjob"
keywords = ["async tasks", "crontab", "rest api"]
authors = ["devtud <devtud@gmail.com>"]
maintainers = ["devtud <devtud@gmail.com>"]
license = "MIT"
include = ["README.md", "src/aiocronjob/build/**/*"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
crontab = "^0.22.8"
pytz = "^2020.1"
importlib_metadata = {version = "^1.6.1", python = "<3.8"}
aiofiles = "^0.5.0"
typing-extensions = {version= "^3.7.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.1"}
codecov = "^2.1.11"
black = "^20.8b1"
aiounittest = {version = "^1.4.0", python = "<3.8"}
httpx = "^0.17.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aiocronjob"]

[tool.coverage.report]
fail_under = 100
precision = 2
exclude_lines = [
    "pragma: not covered",
    "@overload",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "except ImportError:"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"
