[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aiocronjob"]

[tool.coverage.report]
fail_under = 100
precision = 2
exclude_lines = [
    "pragma: not covered",
    "@overload",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "except ImportError:"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pdm.build]
includes = ["README.md", "src/aiocronjob/"]
excludes = ["tests/"]

[tool.pdm.dev-dependencies]
dev = [
    "coverage[toml]>=5.1",
    "codecov>=2.1.11",
    "black>=20.8b1",
    "httpx>=0.17.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "aiocronjob"
version = "0.4.2"
description = "Schedule async tasks and manage them using a REST API or WEB UI"
authors = [
    { name = "devtud", email = "devtud@gmail.com" },
]
dependencies = [
    "fastapi>=0.55.1",
    "uvicorn>=0.11.5",
    "crontab>=0.22.8",
    "pytz>=2020.1",
    "aiofiles>=0.5.0",
]
requires-python = ">=3.8, <3.11"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "devtud", email = "devtud@gmail.com" },
]
keywords = ["async tasks", "crontab", "rest api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
homepage = "https://github.com/devtud/aiocronjob"
repository = "https://github.com/devtud/aiocronjob"
